--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ ipython==6.1.0
 ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.10.2
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 numpy==1.13.3
 pandas==0.20.3
