--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 appnope==0.1.0
 click==6.7
 decorator==4.1.2
-Flask==0.12.2
+flask>=1.0.0
 Flask-PyMongo==0.5.1
 Flask-SQLAlchemy==2.3.2
 gunicorn==19.7.1
